<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Count!</string>
    <string name="app_name">count</string>
    <color name="all_white">#ffffff</color>
    <string name="quit">QUIT</string>
    <string name="history">HISTORY</string>
    <string name="create">NEW</string>
    <string name="countname">Count Name</string>
    <string name="votetype">Type</string>
    <string name="upload">Upload</string>
    <string name="btnewok">OK</string>
    <string name="btnewcancel">Cancel</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
</resources>